--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node": ">= 0.10.0"
   },
   "scripts": {
-    "test": "grunt jasmine"
+    "test": "grunt nodeunit"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
