--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^2.3.0",
-    "grunt-jsdoc": "^1.0.0"
+    "grunt-jsdoc": "^1.0.0",
+    "file-api": "^0.10.4"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
