licence & package update

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "EUPL v.1.1",
   "licenses": [
     {
-      "type": "EUPL v.1.1",
+      "type": "EUPL-1.1",
       "url": "https://github.com/GeoSmartCity-CIP/gsc-client/blob/master/LICENSE"
     }
   ],
