--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-concat-css": "^0.3.1",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-uglify": "^0.11.0",
