--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "grunt-concat-css": "^0.3.1",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-jasmine": "^1.0.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^2.3.0",
-    "grunt-jsdoc": "^1.0.0"
+    "grunt-jsdoc": "^1.0.0",
+    "ink-docstrap": "^1.1.4"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
