--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "jquery.1": "^1.0.0",
-    "openlayers": "^3.13.0",
-    "jszip": "^2.5.0"
+    "openlayers": "^3.13.0"
   },
   "keywords": [],
   "directories": {
