--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gsc",
   "description": "Geosmartcity Client Side Javascript Library",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "homepage": "https://github.com/GeoSmartCity-CIP/gsc-client",
   "author": "GSC partners",
   "repository": {
@@ -47,5 +47,8 @@
   "keywords": [],
   "directories": {
     "doc": "doc"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
