--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^2.3.0",
     "grunt-jsdoc": "^1.0.0",
-    "ink-docstrap": "^1.1.4",
-    "file-api": "^0.10.4"
+    "ink-docstrap": "^1.1.4"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
