Support for ES6

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,6 +3,7 @@
     "eqeqeq": false,
     "immed": true,
     "latedef": true,
+    "esnext": true,
     "newcap": true,
     "noarg": true,
     "sub": true,
