--- a/.jshintrc
+++ b/.jshintrc
@@ -10,6 +10,7 @@
     "undef": true,
     "boss": true,
     "eqnull": true,
+    "multistr": true,
     "predef": ["exports"],
     "globalstrict": true,
     "browser": true,
