--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "jquery.1": "^1.0.0",
+    "jquery": "^3.1.0",
     "openlayers": "^3.13.0",
     "x-editable": "^1.5.1"
   },
